<resources>
    <string name="app_name">comicCollector</string>
    <string name="browse">Browse</string>
    <string name="my_collection">My collection</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="title_home">kk</string>
    <string name="apiLink">http://gateway.marvel.com/v1/public/comics/</string>
    <string name="privateKey">160ba682255404c4190a9076642cacae20f9f4cf</string>
    <string name="publicKey">25119df35812e08ad556e1341e548b06</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comicbook">Comicbook</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="comiccollector">ComicCollector</string>
    <string name="Welcome_message">Great to see you, register so you can start collecting!</string>
    <string name="log_in">Login</string>
    <string name="log_in_to_get_started_i_m_so_excited_that_you_re_back_who_are_you_again">Log in to get started. I\'m so excited that you\'re back. Who are you again?</string>
    <string name="email_adress">Email adress</string>
    <string name="password">Password</string>
    <string name="press_the_back_button_to_leave">Press the back button to leave</string>
    <string name="continueing">Continue</string>
    <string name="i_would_love_to_know_you_tell_me_something_about_yourself_but_first_let_s_get_the_formal_knowabouts_out_of_the_way">I would love to know you, tell me something about yourself! But first let\'s get the formal knowabouts out of the way:</string>
    <string name="confirm_password">Confirm password</string>
    <string name="wrongInput">Something is wrong, check your password if it\'s long enough. Or maybe it\'s your email. Try again</string>
    <string name="error_empty_fields">You need to enter both fields!</string>
    <string name="loginFailed">You forgot your secret password or I don\'t know you!</string>
    <string name="meet">Let\'s meet</string>
    <string name="PersonalInfo">It\'s time to discuss some juicy details</string>
    <string name="how_should_i_call_you">How should i call you?</string>
    <string name="how_old_are_you">How old are you?</string>
    <string name="it_s_a_tip">It\'s a tip</string>
    <string name="try_to_check_out_other_users_it_s_fun">Try to check out other users, it\'s fun!</string>
    <string name="LeaveWarning">Press back again to leave the application</string>
    <string name="limit">\?limit=100</string>
    <string name="fix_summary">Is not available. I think it is an awesome comic!</string>
    <string name="discard">Discard</string>
    <string name="confirm">Confirm</string>
    <string name="logout">Logout</string>
    <string name="warningDelete">Hold the button to delete the score</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="saveWarning">if you are done, press OK to commit your changes</string>
    <string name="noInternet">You don\'t have an internet connection</string>
    <string name="loading">Loading</string>


</resources>
