<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.vincent.comiccollector.registerProcess">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="350dp"
        android:layout_height="500dp"
        android:layout_gravity="center"
        android:background="@drawable/common_google_signin_btn_icon_light_normal_background">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/raleway"
            android:text="@string/register"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/errorR"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/raleway"
            android:text="@string/i_would_love_to_know_you_tell_me_something_about_yourself_but_first_let_s_get_the_formal_knowabouts_out_of_the_way"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout5"
            android:layout_width="280dp"
            android:layout_height="274dp"
            android:layout_marginBottom="68dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/emailRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:fontFamily="@font/raleway"
                android:hint="@string/email_adress"
                android:inputType="textImeMultiLine|textEmailAddress"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/passwordRegister"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:fontFamily="@font/raleway"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailRegister" />

            <EditText
                android:id="@+id/passwordControl"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:fontFamily="@font/raleway"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordRegister" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="96dp"
                android:layout_height="50dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/raleway"
                android:text="@string/continueing"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordControl" />
        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/raleway"
            android:gravity="bottom"
            android:text="@string/press_the_back_button_to_leave"
            android:textColor="#90000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout5"
            app:layout_constraintVertical_bias="0.627" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>
